Impute_Experiments/logs/output.434349_4.out
Run: 4
/cm/local/apps/slurm/var/spool/job434349/slurm_script: line 23: /common/ketrong/minconda3/etc/profile.d/conda.sh: No such file or directory
/cm/local/apps/slurm/var/spool/job434349/slurm_script: line 26: $'\nconda create --name tpot2devenv -c conda-forge python=3.10\n': command not found
/cm/local/apps/slurm/var/spool/job434349/slurm_script: line 31: $'\npip install -r requirements.txt\n': command not found
RunStart
Traceback (most recent call last):
  File "/common/ketrong/AutoImputeExp/tpot2_imputetest/Impute_Experiments/main.py", line 6, in <module>
    import utils
  File "/common/ketrong/AutoImputeExp/tpot2_imputetest/Impute_Experiments/utils.py", line 285
    save_folder = f"{base_save_folder}/{exp['exp_name']}_{taskid}_{level}_{type}_{}"
                                                                                    ^
SyntaxError: f-string: empty expression not allowed
srun: error: esplhpc-cp004: task 0: Exited with exit code 1
